# torii

./: .gitignore  README.rst  pyproject.toml
tests/: test_torii.py
torii/: console.py  generate.py
