[tool.poetry]
name = "torii"
version = "0.1.0"
description = "Applies JSON files to Jinja2 templates"
authors = ["J. W. Smith <jwsmith2spam at gmail dot com>"]

[tool.poetry.scripts]
torii = 'torii.console:run'

[tool.poetry.dependencies]
python = "^3.6"
Jinja2 = "^2.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
